--- a/ansible/roles/set_up_repo/tasks/main.yml
+++ b/ansible/roles/set_up_repo/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: comment mirror
+- name: set up repo
   ansible.builtin.command: find /etc/yum.repos.d/ -type f -name 'CentOS-Linux-*' -exec sed -i 's/^mirrorlist/#mirrorlist/g' {} +
 
-- name: new base url
+- name: set up repo
   ansible.builtin.command: find /etc/yum.repos.d/ -type f -name 'CentOS-Linux-*' -exec sed -i 's|^#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' {} +
