--- a/ansible/templates/dhcpd.conf
+++ b/ansible/templates/dhcpd.conf
@@ -11,17 +11,17 @@ option pxelinux.reboottime code 211 = unsigned integer 32;
 option architecture-type code 93 = unsigned integer 16;
 
 #Указываем сеть и маску подсети, в которой будет работать DHCP-сервер
-subnet 10.0.0.0 netmask 255.255.255.0 {
+subnet {{ dhcp_network }} netmask {{ dhcp_mask }} {
         #Указываем шлюз по умолчанию, если потребуется
         #option routers 10.0.0.1;
         #Указываем диапазон адресов
-        range 10.0.0.100 10.0.0.120;
+        range {{ dhcp_range_min }} {{ dhcp_range_max }};
         }
 
         class "pxeclients" {
           match if substring (option vendor-class-identifier, 0, 9) = "PXEClient";
           #Указываем адрес TFTP-сервера
-          next-server 10.0.0.20;
+          next-server {{ pxe_server }};
           #Указываем имя файла, который надо запустить с TFTP-сервера
           filename "pxelinux.0";
         }
